src/objects/cb5__CBAmount__c.object
<CustomObject>
    <fields>
        <fullName>cb5__CBBudgetLine__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CB Budget Line</label>
        <referenceTo>cb5__CBBudgetLine__c</referenceTo>
        <relationshipLabel>CB Amounts</relationshipLabel>
        <relationshipName>CBAmounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cb5__CBBudgetYearSet__c</fullName>
        <formula>cb5__CBPeriod__r.cb5__CBBudgetYearSet__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CB Budget Year Set</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cb5__CBBudgetYear__c</fullName>
        <formula>cb5__CBPeriod__r.cb5__CBBudgetYear__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CB Budget Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cb5__CBKey__c</fullName>
        <label>CB Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cb5__CBPeriod__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>CB Period</label>
        <referenceTo>cb5__CBPeriod__c</referenceTo>
        <relationshipLabel>CB Amounts</relationshipLabel>
        <relationshipName>CB_Amounts</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cb5__CBStyleName__c</fullName>
        <formula>SUBSTITUTE(cb5__CBStyle__r.Name, &quot; &quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CB Style Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cb5__CBStyle__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CB Style</label>
        <referenceTo>cb5__CBStyle__c</referenceTo>
        <relationshipLabel>CB Amounts</relationshipLabel>
        <relationshipName>CB_Style</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cb5__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cb5__PeriodName__c</fullName>
        <formula>cb5__CBPeriod__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Period Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cb5__ScenarioName__c</fullName>
        <formula>cb5__CBBudgetLine__r.cb5__CBScenario__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Scenario Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cb5__Value__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Value</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>CB Amount</label>
    <listViews>
        <fullName>cb5__All</fullName>
        <columns>NAME</columns>
        <columns>cb5__CBPeriod__c</columns>
        <columns>cb5__CBBudgetLine__c</columns>
        <columns>cb5__Value__c</columns>
        <columns>cb5__CBBudgetYear__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>cb5__CBBudgetLine__c</field>
            <operation>equals</operation>
            <value>Multiyear Budget Line</value>
        </filters>
        <filters>
            <field>cb5__CBBudgetYear__c</field>
            <operation>equals</operation>
            <value>a047e000007391n</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <label>CB Line Amount Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CB Amounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>